--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://benhartley.github.com
-title: test
+title: hartley.io
 subtitle: coffeescript, backbone, node + related technologies
 author: Ben Hartley
 simple_search: http://google.com/search
