--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ default_asides: [custom/asides/about.html, asides/recent_posts.html, asides/gith
 # ----------------------- #
 
 # Github repositories
-github_user:
-github_repo_count: 0
+github_user: benhartley
+github_repo_count: 2
 github_show_profile_link: true
 github_skip_forks: true
 
